--- a/src/components/MotivationContent/MotivationContent.module.scss
+++ b/src/components/MotivationContent/MotivationContent.module.scss
@@ -1,3 +1,40 @@
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media screen and (max-width: 767px) {
+      background-color: rgba(0, 0, 0, 0.25);
+    }
+  }
+
+  
+.modal {
+    margin: 0 auto;
+    min-width: 270px;
+    min-height: 425px;
+    padding-left: 15px;
+    padding-top: 31px;
+    padding-right: 15px;
+    padding-bottom: 36px;
+    background-color: #fff;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    filter: drop-shadow(10px 10px 20px rgba(9, 30, 63, 0.2));
+    @media screen and(min-width: 768px) {
+      min-width: 390px;
+      min-height: 290px;
+      padding-left: 30px;
+      padding-top: 15px;
+      padding-right: 60px;
+      padding-bottom: 31px;
+    }
+  }
+
+  
 .motivContent {
     padding: 44px 30px 50px;
     width: 270px;
