--- a/src/components/LineChart/LineChart.module.scss
+++ b/src/components/LineChart/LineChart.module.scss
@@ -1,13 +1,16 @@
 .chartWrap {
   width: 270px;
   height: 290px;
+  margin-bottom: 30px;
   @media screen and (min-width: 768px) {
     width: 678px;
     height: 340px;
+    margin-bottom: 40px;
   }
   @media screen and (min-width: 1280px) {
     width: 886px;
     height: 340px;
+    margin-bottom: 0px;
   }
 }
 
