plusBtn at mobileTraining

--- a/src/components/MobileModalStartTraining/MobileModalStartTraining.module.css
+++ b/src/components/MobileModalStartTraining/MobileModalStartTraining.module.css
@@ -1,4 +1,32 @@
-.mobileTitle {
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media screen and (max-width: 767px) {
+      background-color: rgba(0, 0, 0, 0.25);
+    }
+  }
+
+  
+.modal {
+    margin: 0 auto;
+    min-width: 320px;
+    min-height: 425px;
+    padding-left: 15px;
+    padding-top: 31px;
+    padding-right: 15px;
+    padding-bottom: 36px;
+    background-color: #F6F7FB;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    filter: drop-shadow(10px 10px 20px rgba(9, 30, 63, 0.2));
+  }
+  
+  .mobileTitle {
     display: block;
     padding-top: 11px;
     margin-top: 0;
@@ -34,4 +62,10 @@
     font-weight: 900;
     margin-top: 25px;
     margin-bottom: 25px;
+}
+
+@media screen and (min-width: 768px) {
+    .arrowBtn {
+        display: none;
+    }
 }
