--- a/src/pages/TrainingPage/TrainingPage.module.css
+++ b/src/pages/TrainingPage/TrainingPage.module.css
@@ -115,3 +115,22 @@
         display: flex;
     }
 }
+
+
+.plusBtn{
+    display: block;
+    background: #FF6B08;
+    color: #FFFFFF;
+    font-size: 25px;
+    border:transparent;
+    border-radius: 50%;
+    width: 52px;
+    height: 52px;
+    margin: -58px auto 25px;    
+}
+
+@media screen and (min-width: 768px) {
+    .plusBtn {
+        display: none;
+    }
+}
