--- a/src/pages/TrainingPage/TrainingPage.module.css
+++ b/src/pages/TrainingPage/TrainingPage.module.css
@@ -134,3 +134,11 @@
         display: none;
     }
 }
+
+
+
+@media screen and (max-width: 768px) {
+    .mobileHide {
+        display: none;
+    }
+}
